@startuml
package "com.todoapp.domain" {
  class Todo {
    Long id
    String title
    String description
    boolean completed
    java.time.LocalDateTime createdAt
    java.time.LocalDateTime updatedAt
    java.util.Set<Tag> tags
    void markCompleted()
    void markPending()
  }

  class Tag {
    Long id
    String name
  }
}

package "com.todoapp.repository" {
  interface TodoRepository {
    Todo save(Todo)
    java.util.Optional<Todo> findById(Long)
    java.util.Optional<Todo> findByTitle(String)
    java.util.List<Todo> findAll()
    void deleteById(Long)
    java.util.List<Todo> searchByText(String)
    java.util.List<Todo> findBefore(java.time.LocalDateTime, int)
    java.util.List<Todo> findByTag(String)
    void deleteAll()
  }

  interface TagRepository {
    Tag save(Tag)
    java.util.Optional<Tag> findById(Long)
    java.util.Optional<Tag> findByName(String)
    java.util.List<Tag> findAll()
    void deleteAll()
  }
}

package "com.todoapp.service" {
  class TodoService {
    Todo createTodo(String title, String description, java.util.Set<String> tagNames)
    Todo updateTodoByTitle(String oldTitle, String newTitle, String description, java.util.Set<String> tagNames)
    void deleteByTitle(String title)
    void clearAll()
    Todo markCompletedByTitle(String title)
    Todo markPendingByTitle(String title)
    java.util.List<Todo> listTodos()
    java.util.List<Todo> searchTodos(String query)
    java.util.List<Todo> listTodosBefore(java.time.LocalDateTime before)
    java.util.List<Todo> listTodosBefore(java.time.LocalDateTime before, int limit)
    java.util.List<Todo> findByTag(String tag)
    Todo addTags(String title, java.util.Set<String> tagNames)
    Todo removeTags(String title, java.util.Set<String> tagNames)
    int countCompleted()
    int countPending()
    Todo getByTitle(String title)
  }

  class DashboardService {
    int completedCount()
    int pendingCount()
  }
}

TodoService --> TodoRepository
TodoService --> TagRepository
DashboardService --> TodoRepository

Todo "*" -- "*" Tag
@enduml

@startuml
actor Client
participant TodoService
participant TagRepository
participant TodoRepository

Client -> TodoService : createTodo(title, description, tagNames)
TodoService -> TagRepository : findByName(name)/save(tag)
TodoService -> TodoRepository : save(todo)
TodoRepository --> TodoService : todo
TodoService --> Client : todo
@enduml

@startuml
actor Client
participant TodoService
participant TodoRepository

Client -> TodoService : markCompletedByTitle(title)
TodoService -> TodoRepository : findByTitle(title)
TodoRepository --> TodoService : todo
TodoService -> Todo : markCompleted()
TodoService -> TodoRepository : save(todo)
TodoService --> Client : todo
@enduml
